Click me button added

--- a/catagories.html
+++ b/catagories.html
@@ -13,9 +13,9 @@
     <a href="#media">Media</a> <hr>
     <a href="#catagories">Catagories</a> <hr>
     
-    <div class="meeting">
+    <div class="meeting" style="background-color:lightblue">
         <h2 style="color:rgb(19, 0, 128)", id="catagories">Catagories:</h2>
-        <ul>
+        <ul style="background-color:blanchedalmond">
             <a>
                 <p>Today's Agenda</p>
                 <p>Brainstorming</p>
@@ -30,7 +30,7 @@
             </a> <br>
         </ul>
         <h2 style="color:rgb(19, 0, 128)" id="media">Media:</h2>
-        <ul>
+        <ul style="background-color:blanchedalmond">
             <p>Videos:</p>
             <ul>
                 <video controls src="media/video.mov" width="200"></video>
