--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
         <img src="media/CSE.jpeg" width="200"/>
     </a>
     <a href="catagories.html" target="_blank">
-        <h1 style="color:darkblue"><strong>Meetings &copy;</strong></h1> <hr>
+        <h1 style="color:darkblue"><strong>Meetings &copy;</strong></h1>
+        <button>Click Me!</button> 
+        <hr>
     </a>
     <ol>
     </ol>
