--- a/catagories.html
+++ b/catagories.html
@@ -6,7 +6,7 @@
     <title>Catagories</title>
 </head>
 <body>
-    <a href="/Lab2/index.html">Home Page</a> 
+    <a href="/Lab2_Starter/index.html">Home Page</a> 
     <img src="media/CSE.jpeg" width="20">
     <a href="https://google.com" target="_blank">Google</a>
     <a href="./media/CSE.jpeg"></a> <hr>
