--- a/index.html
+++ b/index.html
@@ -14,8 +14,41 @@
         <h1 style="color:darkblue"><strong>Meetings &copy;</strong></h1>
         <button>Click Me!</button>
         <hr>
-    </a>
-    <ol>
-    </ol>
+    <img src="media/CSE.jpeg" width="20">
+    <a href="https://google.com" target="_blank">Google</a>
+    <a href="./media/CSE.jpeg"></a> <hr>
+    <a href="#media">Media</a> <hr>
+    <a href="#catagories">Catagories</a> <hr>
+    
+    <div class="meeting" style="background-color:lightblue">
+        <h2 style="color:rgb(19, 0, 128)", id="catagories">Catagories:</h2>
+        <ul style="background-color:blanchedalmond">
+            <a>
+                <p>Today's Agenda</p>
+                <p>Brainstorming</p>
+                <p>Documentation</p>
+                <p>Today's Agenda</p>
+                <p>Attendance Lists</p>
+                <p>Unresolved Issues</p>
+                <p>Future Plans</p>
+                <p>Unresolved Issues</p>
+                <p>Miscellaneous</p>
+                <a href="https://www.google.com/calendar/" target="_blank">Dates</a>
+            </a> <br>
+        </ul>
+        <h2 style="color:rgb(19, 0, 128)" id="media">Media:</h2>
+        <ul style="background-color:blanchedalmond">
+            <p>Videos:</p>
+            <ul>
+                <video controls src="media/video.mov" width="200"></video>
+            </ul>
+             <br>
+            <p>Audios:</p>
+            <ul>
+                <audio controls src="media/the-expanse-ringtone.mp3">Audio</audio>
+            </ul> <br>
+        </ul>
+        <a href="#">Jump to Top</a>
+      </a> <a href="/fa22-cse110-lab3/index.html">Home Page</a> 
   </body>
 </html>
