--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   </head>
   <body>
     <a href="index.html">
-        <img src="media/CSE.jpeg" width="200"/>
+        <!-- <img src="media/CSE.jpeg" width="200"/> -->
+        <iframe src="https://giphy.com/embed/lSzQjkthGS1gc" width="346" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/animated-rain-lSzQjkthGS1gc">via GIPHY</a></p>
     </a>
         <h1 style="color:darkblue"><strong>Meetings &copy;</strong></h1>
         <hr>
