--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <a href="index.html">
         <!-- <img src="media/CSE.jpeg" width="200"/> -->
-        <iframe src="https://giphy.com/embed/lSzQjkthGS1gc" width="346" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/animated-rain-lSzQjkthGS1gc">via GIPHY</a></p>
+        <iframe src="media/giphy.gif" width="1500" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></p>
     </a>
         <h1 style="color:darkblue"><strong>Meetings &copy;</strong></h1>
         <hr>
