modified:   index.html

--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
                 <li>
                     <form action="" method="post">
                         <select name="day" multiple>
-                            <option value="Submit">Meron</option>
-                            <option value="Submit">Luwam</option>
-                            <option value="Submit">Asfaw</option>
-                            <option value="Submit">Sebhatu</option>
+                            <option value="submit">Meron</option>
+                            <option value="submit">Luwam</option>
+                            <option value="submit">Asfaw</option>
+                            <option value="submit">Sebhatu</option>
                           </select> <br>
                         <label for="fname">First name:</label><br>
                         <input type="text" id="fname" name="fname"><br>
