--- a/index.html
+++ b/index.html
@@ -16,12 +16,10 @@
   </head>
   <body>
     <Main>
+        <a href="index.html" ><img src="media/CSE.jpeg"></a>
         <header>
             <h1>Code Avengers&copy;<br>Meeting</h1>
             <nav>
-                <a href="index.html" >
-                    <!-- <img src="media/CSE.jpeg"> -->
-                </a>
                 <div class="nav-links">
                     <ul>
                         <li><a href="">About</a></li>   
