--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     ago they can jog their memory.">
     <title>Code Avengers</title>
     <!-- CSS styling file -->
-    <!-- <link rel="stylesheet" href="css/normalize.css"> -->
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <!-- Google font -->
     <link href="https://fonts.googleapis.com">
   </head>
   <body>
     <Main>
-        <a href="index.html" ><img src="media/CSE.jpeg"></a>
+        <a href="index.html" ><img src="media/CSE.jpeg" alt=""></a>
         <header>
             <h1>Code Avengers&copy;<br>Meeting</h1>
             <nav>
